<resources>
    <string name="app_name">Adroid Application</string>
    <string name="enter_name">enter name</string>
    <string name="info">Info</string>
    <string name="location">Camera Map</string>
    <string name="movies">Movies</string>
    <string name="parks">Parks</string>
    <string name="traffic">Cameras</string>
    <string name="music">Music</string>
    <string name="food">Food</string>
    <string name="home">Home</string>
    <string name="movie_list_name">Movies</string>
    <string name="title_activity_movies">Movies</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="traffic_cams">Traffic Cameras</string>
    <string name="traffic_cams_map">Traffic Cam Map</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="firebase">Firebase</string>
</resources>